# libgit2pp

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
include/: git2pp.h
include/git2pp/: blob.h  checkoutoptions.h  cherrypickoptions.h  commit.h  config.h  credentials.h  database.h  databasebackend.h  diff.h  diffdelta.h  difffile.h  exception.h  global.h  index.h  indexentry.h  indexmodel.h  libgit2pp_config.h  libgit2pp_flags.h  libgit2pp_types.h  mergeoptions.h  object.h  oid.h  rebase.h  rebaseoptions.h  ref.h  remote.h  repository.h  revwalk.h  signature.h  status.h  statusentry.h  statuslist.h  statusoptions.h  tag.h  tree.h  treeentry.h
src/: Mainpage.dox  blob.cpp  checkoutoptions.cpp  cherrypickoptions.cpp  commit.cpp  config.cpp  credentials.cpp  database.cpp  databasebackend.cpp  diff.cpp  diffdelta.cpp  difffile.cpp  exception.cpp  global.cpp  index.cpp  indexentry.cpp  indexmodel.cpp  mergeoptions.cpp  object.cpp  oid.cpp  rebase.cpp  rebaseoptions.cpp  ref.cpp  remote.cpp  repository.cpp  revwalk.cpp  signature.cpp  status.cpp  statusentry.cpp  statuslist.cpp  statusoptions.cpp  tag.cpp  tree.cpp  treeentry.cpp
src/private/: annotatedcommit.cpp  annotatedcommit.h  buffer.cpp  buffer.h  credentials.h  helpers.cpp  helpers.h  pathcodec.cpp  pathcodec.h  remotecallbacks.cpp  remotecallbacks.h  strarray.cpp  strarray.h
tests/: CMakeLists.txt  Checkout.cpp  Clone.cpp  Diff.cpp  Fetch.cpp  Init.cpp  Push.cpp  Rebase.cpp  Repository.cpp  Revision.cpp  TestHelpers.cpp  TestHelpers.h
